# vllm-omni-draft

./: pyproject.toml  test_am.py
.github/: CODEOWNERS  automerge.yml
.github/workflows/: add_label_automerge.yml  automerge.yml  ci-all-files.yml
src/: QwenImage_V1_Integration.md  QwenImage_V1_Mermaid.md  README_TESTING.md  VLLM_V1_Interface.md  simple_test.py
src/CI_test/: .pre-commit-config.yaml  pyproject.toml  test_ci_local.sh  test_with_act.sh  validate_automerge.sh
src/CI_test/.github/: CODEOWNERS
src/CI_test/.github/workflows/: automerge.yml  ci.yml  pre-commit.yml
src/CI_test/tests/: conftest.py  test_end2end.py  test_example.py  test_omni_llm.py  test_processing_omni.py  utils.py
src/doc/: AUTOMERGE_TESTING.md  CI_AM_TESTING.md  CI_CONFIG_DETAILED.md  CI_SCOPE_ANALYSIS.md  CI_TEST_SCOPE.md  CI_files.md  CI_related.md  CI_test_end2end.md  CI_test_example.md  CI_workflows.md  LOCAL_CI_TESTING.md  QwenImage_Diffusers_Interface.md  QwenImage_V1_Integration.md  UT_PLAN_omni_llm.md  VLLM_V1_Interface.md  benchmark_results.md  engine_core.md  meeting_notes.md  performance_enhancement.md  test_report.md  test_report_auto.md  vllm_omni_design.md  vllm_serve_pipeline_v1.md
src/doc/archive/: CI_test_example.md
src/performance_enhancement/: test.ipynb  test_data.py  test_performance.py  test_pipeline.py
src/qwen_image/: processor.py  runner_adapter.py  types.py
src/qwen_image_gen/: __init__.py  config.py  executor.py  model.py  processor.py  quick_test.py  run_tests.sh  test_qwen_image_gen.py  test_vllm_integration.py  types.py  worker.py
(+2 files in other folders)
